src/snapshots/afrotd__parser__tests__interpretation_html_9.1.9_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.9.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Quarterback A11 geht zurück in seine Pocket, um einen Pass zu
            werfen. In dem Moment, als er den Ball loslässt, prallt B88 mit
            seinen Schultern gegen A11’s Knie. Der Pass (a) ist unvollständig;
            (b) wird von A44 gefangen und dieser wird nach einem Raumgewinn von
            12 Metern an der B-40 getackelt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul von B88 für unnötig hartes Blocken gegen oder unterhalb
                der Knie eines Passers (Regel 9.1.9.b). Automatisch First Down
                und eine 15-Meterstrafe von (a) dem Previous Spot; (b) der
                B-40, dem Ende des Laufes von A44.
            </p>
        </details>
    </div>
</article>
