src/snapshots/afrotd__parser__tests__interpretation_html_9.1.9_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.1.9.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Quarterback A11 geht zurück in seine Pocket, um einen Pass zu
            werfen. Er läuft nach rechts, stellt sich auf und befindet sich in
            einer stationären Wurfhaltung, als B88 mit seinen Schultern gegen
            die Knie von A11 springt. A11 behält den Ball und geht durch den
            Kontakt von B88 zu Boden.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul von B88, Verletzung der Regel 9.1.9.b. Obwohl A11 per
                Definition kein Passer ist, da er noch keinen Pass geworfen
                hat, ist B88’s Aktion ein Foul gemäß Regel 9.1.9.b, wegen A11’s
                Verwundbarkeit als potentieller Passer in einer stationären
                Wurfhaltung.
            </p>
        </details>
    </div>
</article>
