src/snapshots/afrotd__parser__tests__interpretation_html_9.2.1_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.1.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 15 von der B-20. Der berechtigte A88 fängt einen Pass an der
            B-18 und stürmt in Richtung Goalline. In der Nähe der Goalline
            dreht er sich um und macht eine obszöne Geste in Richtung des ihn
            verfolgenden B99. Danach überquert A88 B’s Goalline. Der Fieldjudge
            ist sich unsicher hinsichtlich des genauen Punktes, an dem A88
            seine beleidigende Geste begann.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Foul für unsportliches Verhalten. Wird als Dead Ball Foul
                durchgeführt. Der Touchdown zählt und die Strafe wird, je nach
                Team B’s Wahl, entweder beim Try, dem anschließenden Kickoff
                oder vom Succeeding Spot in Extraperioden durchgeführt.
            </p>
        </details>
    </div>
</article>
