src/snapshots/afrotd__parser__tests__interpretation_html_9.2.1_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.1.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            1. und 10 von der 50. Der Quarterback wirft einen Rückpass auf Back
            A44, der sich nach rechts dreht und in Richtung Goalline stürmt.
            Der Linejudge, der dem Spielgeschehen folgt, wirft eine Flagge,
            weil Linebacker B57 ihn mit beleidigenden Obszönitäten überhäuft
            und sich beschwert, er wäre vom Tight End festgehalten worden. A44
            erzielt einen Touchdown.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Live Ball Foul für unsportliches Verhalten durch B57. Die
                Strafe wird, je nach Team A’s Wahl, entweder auf den Try oder
                den anschließenden Kickoff übertragen.
            </p>
        </details>
    </div>
</article>
