src/snapshots/afrotd__parser__tests__interpretation_html_9.2.1_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.1.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und 5 von der A-45. Ballträger A33 läuft seinen Gegnern davon
            und hat freien Weg zur Goalline. An der B-2 biegt er plötzlich
            scharf nach links ab und trottet entlang der B-2, während die
            Defense Spieler zu ihm aufholen. Kurz bevor diese ihn erreichen
            können, trägt A33 den Ball in B’s Endzone. A33 läuft zu den
            Zuschauerrängen und klatscht mit den Fans „High Five“.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Keine Punkte. A33 hat zwei unsportliche Verhalten Fouls
                begangen. Ein Live Ball Foul und ein Dead Ball Foul. Beide
                15-Meterstrafen werden durchgeführt und A33 wird
                disqualifiziert. A’s Ball, 1. und 10 von der B-32 (Regel
                9.2.6).
            </p>
        </details>
    </div>
</article>
