src/snapshots/afrotd__parser__tests__interpretation_html_9.2.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim vierten Down von der B-12 betritt A1 das Spielfeld mit einem
            Kicking-Tee, während seine anderen 11 Mitspieler sich im Huddle
            befinden. A1 kniet und misst die Entfernung von der neutralen Zone
            zum Kick-Punkt. Während seine Mitspieler das Huddle verlassen,
            verlässt A1 mit dem Tee das Feld. Team A führt schnell ein
            Laufspiel durch.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 15 Meter vom Previous Spot. Es soll keine
                Auswechselung von Spielern vorgetäuscht werden, um einen Gegner
                zu verwirren, und ein Spieler, der mit anderen kommuniziert,
                muss für einen Down im Spiel bleiben.
            </p>
        </details>
    </div>
</article>
