src/snapshots/afrotd__parser__tests__interpretation_html_9.2.2_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 9.2.2.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 1 von der B-40. QB A12 bewegt sich aus einer
            ShotgunFormation nach vorne hinter den Center und ruft Signale im
            vergeblichen Versuch, Team B ins Offside zu locken. Bei 10 Sekunden
            verbleibend auf der Play Clock löst sich A12 von seiner Position
            und joggt in Richtung seiner Seitenlinie. Dabei gestikuliert er
            vehement mit seinen Armen und winkt in Richtung der Ersatzbank. Als
            A12 fast die Seitenlinie erreicht hat, wird der Ball, unmittelbar
            bevor die Play Clock ausläuft, direkt zu Back A44 gesnapt und A44
            advanct bis zu der B-38, wo er getackelt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                A’s Ball, 4. und 16 von der A-45. Unsportliches Verhalten. Team
                A wird mit einer 15-Meterstrafe vom Previous Spot belegt. Die
                Aktion von A12 widerspricht dem Geist der Regel 9.2.2.b.
            </p>
        </details>
    </div>
</article>
